inference_modular modified

--- a/debug.ipynb
+++ b/debug.ipynb
@@ -1051,10 +1051,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "from imageutils import resize_img\n",
+    "\n",
+    "factor = 3\n",
+    "image_path = r\"D:\\NLP 1\\Sat_object_detection\\inference_images\\2.jpg\"\n",
+    "image = Image.open(image_path)\n",
+    "w, h= image.size\n",
+    "resized_img = resize_img(image, h/factor, w/factor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resized_img = Image.fromarray(np.uint8(resized_img)).convert('RGB')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resized_img.show()"
+   ]
   },
   {
    "cell_type": "code",
