--- a/debug.ipynb
+++ b/debug.ipynb
@@ -310,13 +310,15 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'PIL.JpegImagePlugin.JpegImageFile'>\n",
-      "Processing image000.jpg\n",
-      "Performing prediction on 1 number of slices.\n",
-      "6 bboxes found in image000.jpg\n"
+     "ename": "SyntaxError",
+     "evalue": "expected ':' (tools.py, line 50)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
+      "\u001b[0m  File \u001b[0;32mD:\\NLP 1\\venv\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3508\u001b[0m in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001b[0m\n",
+      "\u001b[0m  Cell \u001b[0;32mIn[1], line 1\u001b[0m\n    from inference_modular import ship_detection\u001b[0m\n",
+      "\u001b[1;36m  File \u001b[1;32md:\\NLP 1\\Sat_object_detection\\inference_modular.py:9\u001b[1;36m\n\u001b[1;33m    from tools import haversine_distance, shamsi_date_time, is_image, verify_coords\u001b[1;36m\n",
+      "\u001b[1;36m  File \u001b[1;32md:\\NLP 1\\Sat_object_detection\\tools.py:50\u001b[1;36m\u001b[0m\n\u001b[1;33m    if inference_mode in [\"images_dict\", \"directory\"]\u001b[0m\n\u001b[1;37m                                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m expected ':'\n"
      ]
     }
    ],
@@ -434,6 +436,129 @@
    ],
    "source": [
     "model = torch.load('models/best_model.pth', map_location = \"cuda\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ddd = {'a': 1, 'b': 2}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(ddd.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('RAG-IranEconomy', '')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from os import path\n",
+    "filename = r\"RAG-IranEconomy\"\n",
+    "path.splitext(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Image000', 'Image001', 'Image002', 'Image003', 'Image004', 'Image005', 'Image006', 'Image007', 'Image008', 'Image009', 'Image010', 'Image011', 'Image012', 'Image013', 'Image014', 'Image015', 'Image016', 'Image017', 'Image018', 'Image019', 'Image020', 'Image021', 'Image022', 'Image023', 'Image024', 'Image025', 'Image026', 'Image027', 'Image028', 'Image029', 'Image030', 'Image031', 'Image032', 'Image033', 'Image034', 'Image035', 'Image036', 'Image037', 'Image038', 'Image039', 'Image040', 'Image041', 'Image042', 'Image043', 'Image044', 'Image045', 'Image046', 'Image047', 'Image048', 'Image049', 'Image050', 'Image051', 'Image052', 'Image053', 'Image054', 'Image055', 'Image056', 'Image057', 'Image058', 'Image059', 'Image060', 'Image061', 'Image062', 'Image063', 'Image064', 'Image065', 'Image066', 'Image067', 'Image068', 'Image069', 'Image070', 'Image071', 'Image072', 'Image073', 'Image074', 'Image075', 'Image076', 'Image077', 'Image078', 'Image079', 'Image080', 'Image081', 'Image082', 'Image083', 'Image084', 'Image085', 'Image086', 'Image087', 'Image088', 'Image089', 'Image090', 'Image091', 'Image092', 'Image093', 'Image094', 'Image095', 'Image096', 'Image097', 'Image098', 'Image099']\n"
+     ]
+    }
+   ],
+   "source": [
+    "images_names = [\"Image{0:03}\".format(i) for i in range(100)]\n",
+    "images = [i for i in range(100)]\n",
+    "\n",
+    "images_dict = {images_names[i]:{\"image\": images[i]} for i in range(len(images_names))}\n",
+    "images_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "dx",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32md:\\NLP 1\\Sat_object_detection\\debug.ipynb Cell 18\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/NLP%201/Sat_object_detection/debug.ipynb#X24sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/NLP%201/Sat_object_detection/debug.ipynb#X24sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     b,c,d \u001b[39m=\u001b[39m dx\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/NLP%201/Sat_object_detection/debug.ipynb#X24sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mexcept\u001b[39;00m:\n",
+      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 3)",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32md:\\NLP 1\\Sat_object_detection\\debug.ipynb Cell 18\u001b[0m line \u001b[0;36m6\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/NLP%201/Sat_object_detection/debug.ipynb#X24sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     b,c,d \u001b[39m=\u001b[39m dx\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/NLP%201/Sat_object_detection/debug.ipynb#X24sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mexcept\u001b[39;00m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/NLP%201/Sat_object_detection/debug.ipynb#X24sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mdx\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/NLP%201/Sat_object_detection/debug.ipynb#X24sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m a \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: dx"
+     ]
+    }
+   ],
+   "source": [
+    "a = False\n",
+    "dx = (1,2,3,4)\n",
+    "try:\n",
+    "    b,c,d = dx\n",
+    "except:\n",
+    "    raise ValueError(\"dx\")\n",
+    "a = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "any([False, False, False])"
    ]
   },
   {
